syntax = "proto3";

package Aevatar.Agents.Core.Tests;

option csharp_namespace = "Aevatar.Agents.Core.Tests.Messages";

import "google/protobuf/timestamp.proto";

// ========== 基础测试消息 ==========

// 通用测试事件
message TestEvent {
    string content = 1;
    string event_id = 2;
    string event_data = 3;
    google.protobuf.Timestamp timestamp = 4;
}

// 添加项目事件
message TestAddItemEvent {
    string item_name = 1;
}

// 更新计数器事件
message TestUpdateCounterEvent {
    int32 delta = 1;
    int32 increment = 2;
}

// 通用配置事件
message GeneralConfigEvent {
    string config_key = 1;
    string config_value = 2;
}

// 特定类型测试事件
message TestSpecificEvent {
    string content = 1;
    string event_id = 2;
}

// 方向测试事件
message DirectionTestEvent {
    string content = 1;
}

// ProtoActor测试事件
message ProtoTestEvent {
    string message = 1;
}

// 测试命令
message TestCommand {
    string command_id = 1;
    string command = 2;
}

// 状态变更事件
message TestStateChangeEvent {
    string old_state = 1;
    string new_state = 2;
    int32 version = 3;
}

// ========== 测试状态 ==========

// 基础测试状态
message TestState {
    repeated string events = 1;
    string name = 2;
    int32 counter = 3;
    repeated string items = 4;
    bool is_active = 5;
    map<string, string> attributes = 6;
}

// 配置测试状态
message TestConfigState {
    string config_key = 1;
    string config_value = 2;
    int32 version = 3;
}

// 事件溯源测试状态
message TestEventSourcingState {
    string id = 1;
    int32 version = 2;
    repeated string event_history = 3;
}

// ========== 团队协作领域 ==========

// 团队状态
message TeamState {
    repeated string assigned_tasks = 1;
    repeated string completed_tasks = 2;
    repeated string testing_tasks = 3;
}

// 开发者状态
message DeveloperState {
    repeated string my_tasks = 1;
    repeated string completed_tasks = 2;
}

// 测试人员状态
message TesterState {
    repeated string testing_queue = 1;
}

// 任务分配事件
message TaskAssignmentEvent {
    string task_id = 1;
    string description = 2;
    string assigned_to = 3;
}

// 任务完成事件
message TaskCompletedEvent {
    string task_id = 1;
}

// 测试开始事件
message TestingStartedEvent {
    string task_id = 1;
}

// 团队消息事件
message TeamMessageEvent {
    string message = 1;
}

// ========== 组织层级领域 ==========

// 高管状态
message ExecutiveState {
    repeated string announcements = 1;
}

// 经理状态
message ManagerState {
    repeated string team_updates = 1;
}

// 员工状态
message EmployeeState {
    repeated string issues = 1;
}

// 公告事件
message AnnouncementEvent {
    string content = 1;
}

// 团队更新事件
message TeamUpdateEvent {
    string content = 1;
}

// 问题报告事件
message IssueReportEvent {
    string issue = 1;
}